--- a/第一个一年计划.md
+++ b/第一个一年计划.md
@@ -1,9 +1,9 @@
 # 第一个一年计划
 
-- [ ] 学习Vivado平台的FPGA开发
-  - [ ] 编码
-  - [ ] 仿真
-  - [ ] 烧录
+- [x] 学习Vivado平台的FPGA开发
+  - [x] 编码
+  - [x] 仿真
+  - [x] 烧录
 - [ ] 学习ZYNQ的开发
   - [ ] Verilog开发
   - [ ] HLS开发
@@ -13,7 +13,7 @@
 - [ ] 学习Latex的使用
   - [ ] 使用Latex整理复试笔记
 - [ ] 学习QT的使用
-  - [ ] 使用原生C++开发QT上位机
+  - [x] 使用原生C++开发QT上位机
 - [ ] 学习Docker的使用
   - [ ] 使用Docker部署WordPress博客
   - [ ] 使用Docker部署Git服务器
