--- a/ESP32开发·[1.1]Linux下部署ESP-IDF开发环境.md
+++ b/ESP32开发·[1.1]Linux下部署ESP-IDF开发环境.md
@@ -87,3 +87,8 @@ PORT为前一步所得到的插入设备端口
 `idf.py -p PORT monitor`
 
 可以观察到开发板的运行状况，使用快捷键 `Ctrl+]`退出 IDF 监视器
+
+
+**关联文档：**
+上一篇：无
+下一篇：[[ESP32开发·[1.2]安装VSCode插件]]
