--- a/Kanban/第一个一年计划.md
+++ b/Kanban/第一个一年计划.md
@@ -6,32 +6,47 @@ kanban-plugin: basic
 
 ## Vivado平台的FPGA开发
 
-  - [x] 编码
-  - [x] 仿真
-  - [x] 烧录
+- [x] 编码
+- [x] 仿真
+- [x] 烧录
+
 
 ## 学习ZYNQ的开发
 
-  - [ ] Verilog开发
-  - [ ] HLS开发
-  - [ ] Linux开发
+- [ ] Verilog开发
+- [ ] HLS开发
+- [ ] Linux开发
+
 
 ## 学习RISC-V
 
 - [ ] FPGA实现RISC-V
 
+
 ## 学习Latex的使用
 
-- [x] 使用Latex整理复试笔记
+- [ ] TexLive 安装
+- [ ] Texstudio 安装
+- [ ] 基本架构
+- [ ] 宏包
+- [ ] 页边距
+- [ ] 页眉页脚
+- [ ] 图表题注
+- [ ] 交叉引用
+- [ ] 表格
+- [ ] 公式
+
 
 ## 学习QT的使用
 
 - [x] 使用原生C++开发QT上位机
 
+
 ## 学习Docker的使用
 
-  - [ ] 使用Docker部署WordPress博客
-  - [ ] 使用Docker部署Git服务器
+- [ ] 使用Docker部署WordPress博客
+- [ ] 使用Docker部署Git服务器
+
 
 ## 学习DeepLearning原理
 
